--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,24 @@ body {
     text-align: center;
     width: 34px;
   }
+
+  .square-highlight {
+    border-color: '#c1eba0';
+    background: #ffffcc;
+    border: 1px solid #999;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 34px;
+  }
+
+
   
   .square:focus {
     outline: none;
